# spock

./: .env.sample  .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: build.yml
spock/: slack.py  spock.py
